[package]
name = "singlevec"
description = "Vec-like container optimized for storing only a single item"
keywords = ["data-structures", "no-std"]
version = "1.7.0"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
edition = "2021"
homepage = "https://github.com/tuffy/singlevec"
repository = "https://github.com/tuffy/singlevec"

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
